# api-rust

teste-api/: Cargo.toml
teste-api/src/: main.rs
